removed client id & secret

--- a/data_prep.ipynb
+++ b/data_prep.ipynb
@@ -32,8 +32,8 @@
     "auth_url = \"https://accounts.spotify.com/api/token\"\n",
     "response = requests.post(auth_url, {\n",
     "    \"grant_type\": \"client_credentials\",\n",
-    "    \"client_id\": \"24432fee68ea464c94ed2eeaff451fea\",\n",
-    "    \"client_secret\": \"5a4e797fab984adb9375ee8c6b9fab95\"\n",
+    "    \"client_id\": \"\",\n",
+    "    \"client_secret\": \"\"\n",
     "})\n",
     "api_token = response.json()['access_token']\n",
     "print(\"API Response Status:\", response.status_code, \"\\nToken:\", api_token)"
