--- a/Mood_Playlist_Generator.ipynb
+++ b/Mood_Playlist_Generator.ipynb
@@ -24,7 +24,7 @@
       "source": [
         "<br> **Table of contents**<a id='toc0_'></a>    \n",
         "- [**Dependencies and Imports**](#toc1_1_)    \n",
-        "  - [**Data Routes** (DO NOT MODIFY)](#toc1_2_)    \n",
+        "- [**Data Routes**](#toc1_2_)    \n",
         "- [**Spotify Data Pre-processing**](#toc2_)    \n",
         "  - [Merge Timbre values scraped from the Spotify Web API ](#toc2_1_)    \n",
         "  - [Normalise Song Features](#toc2_2_)    \n",
