evaluation data, charts and report

--- a/Mood_Playlist_Generator.ipynb
+++ b/Mood_Playlist_Generator.ipynb
@@ -74,7 +74,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [
         {
@@ -106,7 +106,7 @@
               "True"
             ]
           },
-          "execution_count": 2,
+          "execution_count": 1,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -156,7 +156,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -3358,7 +3358,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 3,
       "metadata": {
         "id": "DFk0sojI-pbC"
       },
@@ -3458,110 +3458,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 4,
       "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>id</th>\n",
-              "      <th>energy</th>\n",
-              "      <th>key</th>\n",
-              "      <th>tempo</th>\n",
-              "      <th>timbre</th>\n",
-              "      <th>mood</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>5Ix60J0iq2dVmwd3L9qEER</td>\n",
-              "      <td>0.982</td>\n",
-              "      <td>0.182</td>\n",
-              "      <td>118.207</td>\n",
-              "      <td>0.365</td>\n",
-              "      <td>Energetic</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>6ABVgQIet4qRgLbwdBfAWz</td>\n",
-              "      <td>0.203</td>\n",
-              "      <td>0.000</td>\n",
-              "      <td>72.024</td>\n",
-              "      <td>0.468</td>\n",
-              "      <td>Depression</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>7sEQzQVOjBCQc2sDCzhnYf</td>\n",
-              "      <td>0.426</td>\n",
-              "      <td>0.000</td>\n",
-              "      <td>122.040</td>\n",
-              "      <td>0.770</td>\n",
-              "      <td>Frantic</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>55R3scEMn7riTl00Zja6On</td>\n",
-              "      <td>0.919</td>\n",
-              "      <td>0.818</td>\n",
-              "      <td>159.907</td>\n",
-              "      <td>0.604</td>\n",
-              "      <td>Contentment</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>2mJsP3AWoshhb2t2SXczAw</td>\n",
-              "      <td>0.448</td>\n",
-              "      <td>1.000</td>\n",
-              "      <td>132.155</td>\n",
-              "      <td>0.327</td>\n",
-              "      <td>Contentment</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "                       id  energy    key    tempo  timbre         mood\n",
-              "0  5Ix60J0iq2dVmwd3L9qEER   0.982  0.182  118.207   0.365    Energetic\n",
-              "1  6ABVgQIet4qRgLbwdBfAWz   0.203  0.000   72.024   0.468   Depression\n",
-              "2  7sEQzQVOjBCQc2sDCzhnYf   0.426  0.000  122.040   0.770      Frantic\n",
-              "3  55R3scEMn7riTl00Zja6On   0.919  0.818  159.907   0.604  Contentment\n",
-              "4  2mJsP3AWoshhb2t2SXczAw   0.448  1.000  132.155   0.327  Contentment"
-            ]
-          },
-          "execution_count": 42,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "music_data = pd.read_csv(classified_songs_url)\n",
-        "music_data.head(5)"
+        "test = music_data.head(50)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 48,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3603,75 +3510,77 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>3NzmhJO6CHku13AcSNonIX</td>\n",
-              "      <td>0.998</td>\n",
-              "      <td>0.091</td>\n",
-              "      <td>114.616</td>\n",
-              "      <td>0.612</td>\n",
-              "      <td>Energetic</td>\n",
+              "      <td>0cFlXjTxFdMGGPfLVpt3Wv</td>\n",
+              "      <td>0.402</td>\n",
+              "      <td>0.909</td>\n",
+              "      <td>133.683</td>\n",
+              "      <td>0.325</td>\n",
+              "      <td>Contentment</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>6iJ8RbwzPb08WQe56PxRkl</td>\n",
-              "      <td>0.933</td>\n",
-              "      <td>0.636</td>\n",
-              "      <td>119.974</td>\n",
-              "      <td>0.500</td>\n",
-              "      <td>Energetic</td>\n",
+              "      <td>2yyqi2RVG9xjK6qPF5BlnK</td>\n",
+              "      <td>0.684</td>\n",
+              "      <td>1.000</td>\n",
+              "      <td>137.082</td>\n",
+              "      <td>0.845</td>\n",
+              "      <td>Contentment</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>0i8P9jLrl1XrbauEoMh9sK</td>\n",
-              "      <td>0.959</td>\n",
-              "      <td>0.364</td>\n",
-              "      <td>154.607</td>\n",
-              "      <td>0.395</td>\n",
-              "      <td>Energetic</td>\n",
+              "      <td>4UJZU77monft0JCGm6ZL0H</td>\n",
+              "      <td>0.765</td>\n",
+              "      <td>0.818</td>\n",
+              "      <td>77.858</td>\n",
+              "      <td>0.534</td>\n",
+              "      <td>Contentment</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>5hDWyxR2fCLULjvbPGL0Jm</td>\n",
-              "      <td>0.952</td>\n",
+              "      <td>44szQC2qG5hgwPvlHqKSYY</td>\n",
+              "      <td>0.361</td>\n",
               "      <td>0.727</td>\n",
-              "      <td>155.494</td>\n",
-              "      <td>0.580</td>\n",
-              "      <td>Energetic</td>\n",
+              "      <td>129.493</td>\n",
+              "      <td>0.879</td>\n",
+              "      <td>Contentment</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>7EtvPj9s0Ia6BAODYeodPA</td>\n",
-              "      <td>0.887</td>\n",
-              "      <td>0.364</td>\n",
-              "      <td>168.120</td>\n",
-              "      <td>0.276</td>\n",
-              "      <td>Energetic</td>\n",
+              "      <td>0XMaqQQzz9injqHv04pweE</td>\n",
+              "      <td>0.420</td>\n",
+              "      <td>0.636</td>\n",
+              "      <td>101.483</td>\n",
+              "      <td>0.893</td>\n",
+              "      <td>Contentment</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "                       id  energy    key    tempo  timbre       mood\n",
-              "0  3NzmhJO6CHku13AcSNonIX   0.998  0.091  114.616   0.612  Energetic\n",
-              "1  6iJ8RbwzPb08WQe56PxRkl   0.933  0.636  119.974   0.500  Energetic\n",
-              "2  0i8P9jLrl1XrbauEoMh9sK   0.959  0.364  154.607   0.395  Energetic\n",
-              "3  5hDWyxR2fCLULjvbPGL0Jm   0.952  0.727  155.494   0.580  Energetic\n",
-              "4  7EtvPj9s0Ia6BAODYeodPA   0.887  0.364  168.120   0.276  Energetic"
+              "                       id  energy    key    tempo  timbre         mood\n",
+              "0  0cFlXjTxFdMGGPfLVpt3Wv   0.402  0.909  133.683   0.325  Contentment\n",
+              "1  2yyqi2RVG9xjK6qPF5BlnK   0.684  1.000  137.082   0.845  Contentment\n",
+              "2  4UJZU77monft0JCGm6ZL0H   0.765  0.818   77.858   0.534  Contentment\n",
+              "3  44szQC2qG5hgwPvlHqKSYY   0.361  0.727  129.493   0.879  Contentment\n",
+              "4  0XMaqQQzz9injqHv04pweE   0.420  0.636  101.483   0.893  Contentment"
             ]
           },
-          "execution_count": 43,
+          "execution_count": 48,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
+        "predicted_emotion = \"Contentment\"\n",
+        "\n",
         "shuffled_songs = music_data[music_data['mood'] == predicted_emotion].sample(frac=1).reset_index(drop=True)\n",
         "shuffled_songs.head(5)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 49,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -3687,7 +3596,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 50,
       "metadata": {
         "id": "CIlH1TrFGMzW"
       },
@@ -3710,14 +3619,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 51,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "https://open.spotify.com/playlist/53HDwNs1ijvBP9D9ErET8M\n"
+            "https://open.spotify.com/playlist/5sL5pyHR7YU558bvNLZH2U\n"
           ]
         }
       ],
