web app complete

--- a/Mood_Playlist_Generator.ipynb
+++ b/Mood_Playlist_Generator.ipynb
@@ -3462,8 +3462,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "music_data = pd.read_csv(classified_songs_url)\n",
-        "test = music_data.head(50)"
+        "music_data = pd.read_csv(classified_songs_url)"
       ]
     },
     {
@@ -3572,10 +3571,7 @@
         }
       ],
       "source": [
-        "predicted_emotion = \"Contentment\"\n",
-        "\n",
-        "shuffled_songs = music_data[music_data['mood'] == predicted_emotion].sample(frac=1).reset_index(drop=True)\n",
-        "shuffled_songs.head(5)"
+        "shuffled_songs = music_data[music_data['mood'] == predicted_emotion].sample(frac=1).reset_index(drop=True)"
       ]
     },
     {
